# ncursesFMpp

./: CMakeLists.txt  README.md  TODO.md  main.cpp
Extra/: ncursesFM++.conf  ncursesFM.conf
cmake/: FindNcursesw.cmake  FindUdev.cmake
inc/: fmtab.hpp  log.hpp  modtab.hpp  module.hpp  myconfig.hpp  mymenu.hpp  myncursesmenu.hpp  mytab.hpp  ncursesconfig.hpp  ncursesfm.hpp  ncursesmodtab.hpp  ncursessystab.hpp  ncursestab.hpp  ncursesui.hpp  questiontab.hpp  sysmodule.hpp  systab.hpp
po/: de.po  es_AR.po  fr.po  it.po  ncursesFM++.pot
src/: fmtab.cpp  modtab.cpp  myconfig.cpp  mymenu.cpp  myncursesmenu.cpp  mytab.cpp  ncursesconfig.cpp  ncursesfm.cpp  ncursesmodtab.cpp  ncursessystab.cpp  ncursestab.cpp  ncursesui.cpp  questiontab.cpp  sysmodule.cpp  systab.cpp
